cabal-version: 2.2
name:          fake-package
version:       0

executable script
    main-is:            Main.hs
    default-language:   Haskell2010
    default-extensions:
        UnicodeSyntax BlockArguments TupleSections TypeApplications
        PartialTypeSignatures PatternSynonyms LiberalTypeSynonyms
        StandaloneDeriving FlexibleInstances FlexibleContexts
        MultiParamTypeClasses FunctionalDependencies UndecidableInstances
        RankNTypes DataKinds GADTs ConstraintKinds KindSignatures
        TypeOperators TypeFamilies TypeFamilyDependencies
        ImportQualifiedPost
        ScopedTypeVariables
        TypeSynonymInstances RecordWildCards MagicHash
        GeneralizedNewtypeDeriving DeriveFunctor
        InstanceSigs ApplicativeDo
        ViewPatterns

    -- mixins:   base hiding (Prelude)
    --       , relude (Relude as Prelude)
    --       , relude

    ghc-options:        -Wpartial-type-signatures -fdefer-typed-holes -Wall -Wextra -Wunused-packages -O2 -fprof-auto -fprof-cafs -rtsopts -fdefer-typed-holes
    build-depends: base, base-unicode-symbols, containers, array
        , finite-typelits
        , vector-sized
        , free
        , acts
        , lens
        , memoize
        , relude
        , time
        , recursion-schemes
        , comonad
